--- a/package.json
+++ b/package.json
@@ -6,10 +6,39 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/node": "^16.3.2",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
+    "axios": "^0.21.1",
+    "firebase": "^8.7.1",
+    "hamburger-react": "^2.4.1",
+    "node-sass": "4.14",
     "react": "^17.0.2",
+    "react-cool-virtual": "^0.4.5",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.0.0",
+    "react-icons": "^4.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-loading": "^2.0.3",
+    "react-markdown": "^6.0.2",
+    "react-modal": "^3.14.3",
+    "react-paginate": "^7.1.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "react-simple-star-rating": "^3.0.0",
+    "typescript": "^4.3.5",
+    "workbox-background-sync": "^6.1.5",
+    "workbox-broadcast-update": "^6.1.5",
+    "workbox-cacheable-response": "^6.1.5",
+    "workbox-core": "^6.1.5",
+    "workbox-expiration": "^6.1.5",
+    "workbox-google-analytics": "^6.1.5",
+    "workbox-navigation-preload": "^6.1.5",
+    "workbox-precaching": "^6.1.5",
+    "workbox-range-requests": "^6.1.5",
+    "workbox-routing": "^6.1.5",
+    "workbox-strategies": "^6.1.5",
+    "workbox-streams": "^6.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +63,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-modal": "^3.12.1",
+    "@types/react-paginate": "^7.1.1",
+    "@types/react-router-dom": "^5.1.8",
+    "cors-anywhere": "^0.4.4"
   }
 }
