--- a/package.json
+++ b/package.json
@@ -65,9 +65,12 @@
     ]
   },
   "devDependencies": {
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
     "@types/react-modal": "^3.12.1",
     "@types/react-paginate": "^7.1.1",
     "@types/react-router-dom": "^5.1.8",
-    "cors-anywhere": "^0.4.4"
+    "cors-anywhere": "^0.4.4",
+    "husky": "^7.0.1"
   }
 }
